media/autoscan/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: autoscan
  namespace: media
spec:
  serviceName: autoscan
  replicas: 1
  selector:
    matchLabels:
      app: autoscan
  template:
    metadata:
      labels:
        app: autoscan
        rclone-mounts: "true"
    spec:

      volumes:
        - name: autoscan-iscsi
          persistentVolumeClaim:
            claimName: autoscan-iscsi-pvc
        - name: media-rclone
          hostPath:
            path: /mnt/media-rclone
        - name: config
          configMap:
            name: autoscan
      containers:
        - name: autoscan
          image: docker.io/cloudb0x/autoscan:1.3.0
          # image: alpine
          # command: ["sleep"]
          # args: ["infinity"]
          volumeMounts:
            - name: autoscan-iscsi
              mountPath: /config
            - name: media-rclone
              mountPath: /media
              readOnly: true
            - name: config
              mountPath: /config/config.yaml
              subPath: config.yaml
          ports:
            - name: http
              containerPort: 3030
          # readinessProbe:
          #   tcpSocket:
          #     port: autoscan
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - test -f /media/.anchors/dropbox
            periodSeconds: 10
            failureThreshold: 1
