media/autoscan/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: autoscan
  namespace: media
spec:
  selector:
    app: autoscan
  ports:
  - name: http
    port: 3030
