media/autoscan/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autoscan
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "lga1.desertbluffs.com"
    nginx.ingress.kubernetes.io/auth-tls-secret: "ingress-nginx/auth-tls-secret"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "required"
    nginx.ingress.kubernetes.io/enable-global-auth: "false"
spec:
  ingressClassName: external-nginx
  tls:
    - hosts:
        - l.desertbluffs.com
  rules:
    - host: l.desertbluffs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autoscan
                port:
                  name: http
